force-app/main/default/objects/Tax_Configuration__mdt/Tax_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Stores tax bracket and deduction configuration. Updated annually without code deployment.</description>
    <label>Tax Configuration</label>
    <pluralLabel>Tax Configurations</pluralLabel>
</CustomObject>