force-app/main/default/objects/Tax_Configuration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this tax configuration is the active one for calculations</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>