force-app/main/default/objects/Tax_Configuration__mdt/fields/Medicare_Rate__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Rate__c</fullName>
    <description>Medicare tax rate (e.g., 0.0145 for 1.45%)</description>
    <label>Medicare Rate</label>
    <precision>6</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>