force-app/main/default/objects/Tax_Configuration__mdt/fields/Social_Security_Rate__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Rate__c</fullName>
    <description>Social Security tax rate (e.g., 0.062 for 6.2%)</description>
    <label>Social Security Rate</label>
    <precision>6</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>