force-app/main/default/objects/Tax_Configuration__mdt/fields/Social_Security_Wage_Base__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Wage_Base__c</fullName>
    <description>Maximum earnings subject to Social Security tax</description>
    <label>Social Security Wage Base</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>