force-app/main/default/objects/Tax_Configuration__mdt/fields/Standard_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Standard_Deduction__c</fullName>
    <description>Federal standard deduction amount for single filers</description>
    <label>Standard Deduction</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>