force-app/main/default/objects/Tax_Configuration__mdt/fields/Tax_Brackets_JSON__c.field-meta.xml
<CustomField>
    <fullName>Tax_Brackets_JSON__c</fullName>
    <description>JSON array of tax brackets: [{"min":0,"max":11925,"rate":0.10}, ...]</description>
    <label>Tax Brackets JSON</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>