force-app/main/default/objects/Tax_Configuration__mdt/fields/Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_Year__c</fullName>
    <description>The tax year this configuration applies to</description>
    <label>Tax Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>